--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,14 +11,13 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@pentegra/shared": "workspace:*",
+    "@pentegra/shared": "file:../../packages/shared",
     "hono": "^4.6.5",
     "jose": "^5.2.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240120.0",
-    "@types/node": "^20.11.30",
-    "better-sqlite3": "^11.2.0"
+    "@types/node": "^20.11.30"
   }
 }
