--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -26,3 +26,7 @@ bindings = [
   { name = "TENANT_DISPATCHER", class_name = "TenantDispatcher" },
   { name = "STREAM", class_name = "Stream" }
 ]
+
+[[migrations]]
+tag = "v1"
+new_classes = ["TokenBroker", "TenantDispatcher", "Stream"]
