--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.5",
+    "sql.js": "^1.10.3",
     "typescript": "^5.6.3",
     "vitest": "^1.6.0"
   }
