--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:api": "npm --workspace apps/api run dev",
     "dev:dashboard": "npm --workspace apps/dashboard run dev",
     "dev": "npm run dev:api",
+    "build": "npm --workspace apps/dashboard run build",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "test": "vitest run"
