--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "pages:build": "next build && next-on-pages"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
@@ -36,6 +37,7 @@
     "@hookform/resolvers": "^3.9.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.10.1",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
