--- a/apps/admin/wrangler.toml
+++ b/apps/admin/wrangler.toml
@@ -1,3 +1,4 @@
 name = "pentegra-panel"
 compatibility_date = "2026-01-20"
 compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static"
