--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,9 +10,11 @@
     "pages:build": "next build && next-on-pages"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@next/swc-win32-x64-msvc": "^14.2.33",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.1",
@@ -33,8 +35,7 @@
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.5",
-    "zod": "^3.24.1",
-    "@hookform/resolvers": "^3.9.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.10.1",
