--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,56 +1,55 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "pages:build": "next build && next-on-pages"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@next/swc-win32-x64-msvc": "^14.2.33",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@tanstack/react-query": "^5.59.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "lucide-react": "^0.465.0",
-    "next": "^14.2.35",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.5",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.10.1",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.35",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.6.3"
-  },
-  "overrides": {
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1"
-  }
+    "name":  "admin",
+    "version":  "0.1.0",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev",
+                    "build":  "next build",
+                    "start":  "next start",
+                    "lint":  "eslint",
+                    "pages:build":  "next build \u0026\u0026 next-on-pages"
+                },
+    "dependencies":  {
+                         "@hookform/resolvers":  "^3.9.1",
+                         "@radix-ui/react-checkbox":  "^1.1.2",
+                         "@radix-ui/react-dialog":  "^1.1.2",
+                         "@radix-ui/react-dropdown-menu":  "^2.1.2",
+                         "@radix-ui/react-popover":  "^1.1.2",
+                         "@radix-ui/react-select":  "^2.1.2",
+                         "@radix-ui/react-separator":  "^1.1.1",
+                         "@radix-ui/react-slot":  "^1.1.0",
+                         "@radix-ui/react-switch":  "^1.1.1",
+                         "@radix-ui/react-tabs":  "^1.1.1",
+                         "@radix-ui/react-tooltip":  "^1.1.2",
+                         "@tanstack/react-query":  "^5.59.0",
+                         "class-variance-authority":  "^0.7.0",
+                         "clsx":  "^2.1.1",
+                         "cmdk":  "^1.0.0",
+                         "lucide-react":  "^0.465.0",
+                         "next":  "^14.2.35",
+                         "next-themes":  "^0.4.4",
+                         "react":  "^18.3.1",
+                         "react-dom":  "^18.3.1",
+                         "react-hook-form":  "^7.54.2",
+                         "recharts":  "^2.12.7",
+                         "sonner":  "^1.5.0",
+                         "tailwind-merge":  "^2.5.5",
+                         "zod":  "^3.24.1"
+                     },
+    "devDependencies":  {
+                            "@cloudflare/next-on-pages":  "^1.10.1",
+                            "@types/node":  "^20.11.30",
+                            "@types/react":  "^18.3.11",
+                            "@types/react-dom":  "^18.3.1",
+                            "autoprefixer":  "^10.4.20",
+                            "eslint":  "^8.57.0",
+                            "eslint-config-next":  "^14.2.35",
+                            "postcss":  "^8.4.41",
+                            "tailwindcss":  "^3.4.17",
+                            "typescript":  "^5.6.3"
+                        },
+    "overrides":  {
+                      "@types/react":  "^18.3.11",
+                      "@types/react-dom":  "^18.3.1"
+                  }
 }
